--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "homepage": "https://github.com/WrongEntertainment/PostmanCollectionProgrammatically",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-mocha-istanbul": "^2.1.0",
-    "grunt-mocha-test": "^0.12.1",
-    "istanbul": "^0.3.2",
-    "mocha": "^1.21.5"
+    "grunt": "0.4.5",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-mocha-istanbul": "2.1.0",
+    "grunt-mocha-test": "0.12.1",
+    "istanbul": "0.3.2",
+    "mocha": "1.21.5"
   },
   "dependencies": {
-    "node-uuid": "^1.4.1"
+    "node-uuid": "1.4.1"
   }
 }
