--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "PostmanCollectionProgrammatically",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "create postman collection programmatically",
   "keywords": [
     "postman",
-    "collection"
+    "collection",
+    "programmatically"
   ],
   "author": "Paul Vollmer",
   "license": "MIT",
